# poker-game

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/migrations/: 001_create_hands_table.sql
backend/src/poker_game/: db_init.py
backend/src/poker_game/api/: hands.py  test_hand.py
backend/src/poker_game/domain/: poker_service.py  poker_utils.py
backend/src/poker_game/models/: hand.py
backend/src/poker_game/repositories/: hand_repository.py
frontend/: Dockerfile  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js  tsconfig.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: poker-action-panel.tsx
frontend/src/app/components/ui/: button.tsx  card.tsx  input.tsx  scroll-area.tsx
frontend/src/domain/: pokerGame.ts
frontend/src/services/: apiService.ts
frontend/src/tests/: pokerGame.test.tsx
frontend/src/types/: index.ts
