[tool.poetry]
name = "poker-backend"
version = "0.1.0"
description = ""
authors = ["Natnael Dejene <natnaeldejene19@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
asyncpg = "0.29.0"
pokerkit = "^0.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"